--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "immutable": "^3.8.2"
+    "immutable": "^3.8.2",
+    "react-load-script": "0.0.6"
   }
 }
